<resources>

    <!-- HOME PAGE -->

    <string name="app_name">Genesis VPN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Genesis VPN</string>
    <string name="nav_header_subtitle">gamesolstudios@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_applications">Applications</string>
    <string name="action_setting">Settings</string>
    <string name="home_idle">GO</string>
    <string name="home_connecting">Connecting</string>
    <string name="unconnected_text">Unconnected | Choose Location</string>

    <!-- Landing Page -->
    <string name="LANDING_BRIDGES_INFO" translatable="false">"Explore VPN Settings"</string>
    <string name="LANDING_FILTER_INFO" translatable="false">"Filter apps which can use VPN"</string>
    <string name="LANDING_MORE" translatable="false">"TELL ME MORE"</string>
    <string name="LANDING_VPN_SETUP" translatable="false">"You can enable any app to go through Tor using our built-in VPN"</string>
    <string name="LANDING_VPN_SETUP_SUB_INFO" translatable="false">"This won\'t make you anonymous, but it will help get through firewalls"</string>
    <string name="LANDING_VPN_CHOOSE_APPS" translatable="false">"CHOOSE APPS"</string>
    <string name="LANDING_HELLO" translatable="false">"Hello"</string>
    <string name="LANDING_WELCOME" translatable="false">"Welcome to Genesis VPN"</string>
    <string name="LANDING_BROWSE_INFO" translatable="false">"Browse the internet how you expect you should"</string>
    <string name="LANDING_NO_TRACKING" translatable="false">"No tracking. No censorship"</string>

    <!-- MENU PAGE -->

    <string name="menu_share">Share</string>
    <string name="menu_app">Application Proxy Filter</string>
    <string name="menu_about">About Genesis</string>
    <string name="menu_promotion">Promotion Code</string>
    <string name="menu_location">IP Address &amp; Location</string>
    <string name="menu_speed">Ookla Speed Test</string>
    <string name="menu_help">Help</string>
    <string name="menu_rate">Rate US</string>
    <string name="menu_server">Server Location</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_application">Applications</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_quit">Quit</string>

    <!-- ABOUT US PAGE -->

    <string name="about_title_activity_about_controller">about_controller</string>
    <string name="about_about_us">About Us</string>
    <string name="about_description">Genesis VPN, total free VPN client. Easy to use, one click to connecting VPN. Unlimited bandwidth and unlimited free trial time. You can contact us if you have any queries and we shall try to get back to you as soon as possible</string>
    <string name="about_version_1_0">Version 1.0</string>
    <string name="about_email_gamesolstudios_gmail_com">Email | gamesolstudios@gmail.com</string>
    <string name="about_supported_android_lollipop_and_above">Supported | Android Lollipop and Above</string>
    <string name="about_licence_gpn_open_source">Licence | GPN Open Source</string>

    <!-- PROMOTION PAGE -->

    <string name="promotion_header">Promotion Code</string>
    <string name="promotion_description">Genesis VPN service is completely free. We only earn money from banner advertisement to maintain our server. If you are also disturbed by this, you can remove advert by the promotion code we distributed to you</string>
    <string name="promotion">Promotion</string>
    <string name="promotion_enter_promotion_code">Enter promotion code</string>

    <!-- ALERT PAGE -->

    <string name="alert_dismiss">Dismiss</string>
    <string name="alert_stop">stop</string>
    <string name="alert_default_message">Error Occred | Network Connection Exception</string>
    <string name="alert_title">Error Occured</string>
    <string name="alert_clear_Data">Clear</string>

    <!-- SETTINGS PAGE -->

    <string name="settings">Settings</string>
    <string name="settings_auto_start_header">Connect on device startup</string>
    <string name="settings_auto_start_desc">Auto-connect to VPN on Android startup</string>
    <string name="settings_auto_connect_header">Connect on app launch</string>
    <string name="settings_auto_connect_info">Auto-connect to VPN on app launch</string>
    <string name="settings_connection_header">VPN Sock Mode</string>
    <string name="settings_tcp_info">TCP Mode for games and browsing</string>
    <string name="settings_udp_info">UDP Mode for video streaming</string>
    <string name="settings_udp_text">UDP</string>
    <string name="settings_tcp_text">TCP</string>
    <string name="settings_connection_default_info">DEFAULT Mode for auto configuring</string>
    <string name="settings_connection_auto">AUTO</string>
    <string name="settings_application_header">Application Proxy Filter</string>
    <string name="settings_application_info">Filter applications to be used with proxy</string>
    <string name="settings_smart_vpn">Smart VPN | Boot</string>
    <string name="settings_automatically_set_optimal_location">Automatically set optimal location</string>
    <string name="settings_default_location">Default Location | Boot</string>
    <string name="settings_custom_server_info">Set custom server as default which works best for your location</string>

    <!-- SERVER PAGE -->

    <string name="server_action_servers">Server Location</string>

    <!-- APPLICATION FILTER PAGE -->

    <string name="appfilter_title">Application Proxy Filter</string>
    <string name="appfilter_no_application_found">No Application Found</string>

    <!-- APPLICATION GENERAL -->

    <string name="dashboard">Genesis VPN</string>
    <string name="homepage">Change Location</string>
    <string name="about_text">About Us</string>
    <string name="upload_text_default">0.0 / ↑ kbps</string>
    <string name="download_text_default">0.0 / ↓ kbps</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>
    <string name="tcp_default">TCP</string>
    <string name="temp_header">Temp Header</string>
    <string name="com_temp_body">com.temp.body</string>
    <string name="enter_app_name">Enter app name</string>
    <string name="enter_country_name">Enter country name</string>
    <string name="no_recently_used_servers_found">No Recently Used Servers Found</string>
    <string name="connect_to_any_server_and_comeback_to_us">Connect to any server and comeback to us</string>

    <!-- SERVER PAGE -->

</resources>
