<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_about"
            android:icon="@xml/ic_menu_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_app"
            android:icon="@xml/ic_android_apps"
            android:title="@string/menu_app" />
        <item
            android:id="@+id/server"
            android:icon="@xml/ic_menu_server"
            android:title="@string/menu_server" />
        <item
            android:id="@+id/setting"
            android:icon="@xml/ic_menu_setting"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_promotion"
            android:icon="@xml/ic_baseline_shopping"
            android:title="@string/menu_promotion" />
        <item
            android:id="@+id/nav_ip_address"
            android:icon="@xml/ic_baseline_location"
            android:title="@string/menu_location" />
        <item
            android:id="@+id/nav_share"
            android:icon="@xml/ic_menu_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_help"
            android:icon="@xml/ic_menu_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@xml/ic_menu_rate"
            android:title="@string/menu_rate" />
        <item
            android:id="@+id/ic_menu_privacy"
            android:icon="@xml/ic_menu_privacy"
            android:title="@string/menu_privacy" />
        <item
            android:id="@+id/nav_quit"
            android:icon="@xml/ic_menu_exit"
            android:title="@string/menu_quit" />
    </group>

</menu>
