<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_gravity="top"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="200dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/action_server"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@xml/sc_rounded_corner_without_ripple"
                android:gravity="left|center_vertical"
                android:onClick="onServer"
                android:paddingStart="15dp"
                android:text="@string/server_action_servers"
                android:textSize="12.5sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/holo_dark_light" />

            <Button
                android:id="@+id/action_applications"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@xml/linear_layout_ripple_white"
                android:gravity="left|center_vertical"
                android:onClick="onAppManager"
                android:paddingStart="15dp"
                android:text="@string/action_applications"
                android:textSize="12.5sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/holo_dark_light" />

            <Button
                android:id="@+id/action_setting"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@xml/sc_rounded_corner_without_ripple_bottom"
                android:gravity="left|center_vertical"
                android:onClick="onSettingManager"
                android:paddingStart="15dp"
                android:text="@string/action_setting"
                android:textSize="12.5sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>