<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/m_promotion_alert_dialog_panel"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="10dp"
            android:background="@xml/sc_rounded_corner_warning"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/m_interaction_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:enabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/m_alert_dismiss"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="15dp"
                android:background="@xml/sc_rounded_corner"
                android:text="@string/alert_dismiss"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/m_alert_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="19dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:maxLines="2"
                android:text="@string/alert_default_message"
                android:textColor="@color/text_color_v1"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/m_alert_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="9dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toTopOf="@+id/m_alert_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.375"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/m_alert_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:maxLines="2"
                android:textStyle="bold"
                android:text="@string/alert_title"
                android:textColor="@color/text_color_v1"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>